# user-service/lib/swagger/docs/User Service.yml
@@ -16,12 +16,12 @@ tags:
   - name: "Test"
     description: "테스트용 API (개발 모드에서만 라우팅 됨)"
 paths:
-  /social/registration/:social_id:
+  /users/social/:social_id:
     get:
       tags:
         - "Social"
-      summary: "소셜 가입 확인"
-      description: "소셜 가입이 되었는지 확인합니다."
+      summary: "소셜 가입 정보"
+      description: "소셜 가입 정보를 요청합니다. 이걸로 가입 여부를 확인하면 됩니다."
       parameters:
         - name: "social_id"
           required: true
@@ -32,66 +32,42 @@ paths:
       responses:
         "200":
           description: "가입 된 계정입니다."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    description: "마지막에 갱신된 토큰"
+                  email:
+                    type: string
+                    description: "유저 이메일"
+                  nickname:
+                    type: string
+                    description: "유저 닉네임(Display Name)"
+                  profile_image:
+                    type: string
+                    description: "프로필 이미지 URI"
+                  thumbnail_image:
+                    type: string
+                    description: "썸네일 이미지 URI (파라미터를 보내지 않으면 profile_image와 동일한 값)"
+                  registration_date:
+                    type: string
+                    description: "가입 날짜"
+                  letter_ok:
+                    type: string
+                    description: "메일 수신 동의 날짜 (nullable)"
         "404":
           description: "가입 되지 않은 계정입니다."
         "500":
           description: "서버 에러"
-  /social/registration:
+  /users/social:
     post:
       tags:
         - "Social"
       summary: "소셜 가입 진행"
       description: "DB에 토큰 레코드를 새로 생성하고, 소셜 프로필을 새롭게 저장합니다."
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - token
-                - social_id
-                - email
-                - nickname
-                - profile_image
-              properties:
-                token:
-                  type: string
-                  description: "토큰 값"
-                social_id:
-                  type: string
-                  description: "소셜 아이디"
-                email:
-                  type: string
-                  description: "유저 이메일"
-                nickname:
-                  type: string
-                  description: "유저 닉네임(Display Name)"
-                profile_image:
-                  type: string
-                  description: "프로필 이미지 URI"
-                thumbnail_image:
-                  type: string
-                  description: "썸네일 이미지 URI (파라미터를 보내지 않으면 profile_image와 동일한 값)"
-              example:
-                token: "토큰 값"
-                social_id: "소셜 아이디 값"
-                email: "유저 이메일"
-                nickname: "유저 닉네임(Display Name)"
-                profile_image: "프로필 이미지 URI"
-                thumbnail_image: "썸네일 이미지 URI (파라미터를 보내지 않으면 profile_image와 동일한 값)"
-      responses:
-        "200":
-          description: "토큰 레코드를 생성했고, 전달 받은 파라미터로 소셜 프로필을 만들었습니다."
-        "400":
-          description: "파라미터가 잘못 되었습니다."
-        "500":
-          description: "서버 에러"
-  /social/update:
-    patch:
-      tags:
-        - "Social"
-      summary: "토큰 갱신, 유저 업데이트"
-      description: "토큰을 갱신하고, 유저를 업데이트 합니다. 앱에서 로그인 또는 토큰이 만료되어 새로 갱신했을 경우 해당 API를 호출해주세요."
       requestBody:
         content:
           application/json:
@@ -135,11 +111,58 @@ paths:
                 letter_ok: true
       responses:
         "200":
+          description: "토큰 레코드를 생성했고, 전달 받은 파라미터로 소셜 프로필을 만들었습니다."
+        "400":
+          description: "파라미터가 잘못 되었습니다."
+        "500":
+          description: "서버 에러"
+    patch:
+      tags:
+        - "Social"
+      summary: "토큰 갱신, 유저 업데이트"
+      description: "토큰을 갱신하고, 유저를 업데이트 합니다. 앱에서 로그인 또는 토큰이 만료되어 새로 갱신했을 경우 해당 API를 호출해주세요."
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - token
+                - social_id
+                - email
+                - nickname
+                - profile_image
+              properties:
+                token:
+                  type: string
+                  description: "토큰 값"
+                social_id:
+                  type: string
+                  description: "소셜 아이디"
+                email:
+                  type: string
+                  description: "유저 이메일"
+                nickname:
+                  type: string
+                  description: "유저 닉네임(Display Name)"
+                profile_image:
+                  type: string
+                  description: "프로필 이미지 URI"
+                thumbnail_image:
+                  type: string
+                  description: "썸네일 이미지 URI (파라미터를 보내지 않으면 profile_image와 동일한 값)"
+              example:
+                token: "토큰 값"
+                social_id: "소셜 아이디 값"
+                email: "유저 이메일"
+                nickname: "유저 닉네임(Display Name)"
+                profile_image: "프로필 이미지 URI"
+                thumbnail_image: "썸네일 이미지 URI (파라미터를 보내지 않으면 profile_image와 동일한 값)"
+      responses:
+        "200":
           description: "토큰을 갱신했고, 전달 받은 파라미터로 유저를 업데이트 했습니다."
         "400":
           description: "파라미터가 잘못 되었습니다."
-        "401":
-          description: "social id가 잘못 되었습니다."
         "500":
           description: "서버 에러"
   /tests/isLoggedIn:
@@ -257,12 +280,12 @@ paths:
           description: 인증에 실패했습니다.
         "500":
           description: 서버 에러
-  /users/:email:
+  /users/company/:email:
     get:
       tags:
-        - "Common"
-      summary: "유저 정보 조회"
-      description: "유저 정보를 조회합니다."
+        - "Company"
+      summary: "업체 조회"
+      description: "업체 정보를 조회합니다."
       parameters:
         - name: "email"
           required: true
@@ -272,34 +295,9 @@ paths:
             type: string
       responses:
         "200":
-          description: "소셜 계정의 경우 소셜 프로필을, 업체 계정의 경우 업체 프로필을 함께 응답합니다. 미디어 타입을 반드시 확인해주세요."
+          description: "회사 정보를 리턴합니다."
           content:
-            (소셜) application/json:
-              schema:
-                type: object
-                properties:
-                  email:
-                    description: 이메일
-                    type: string
-                  registration_date:
-                    description: 가입일
-                    type: string
-                  type:
-                    description: 회원 유형
-                    type: string
-                  letter_ok:
-                    description: 메일 수신 동의 날짜 (nullable)
-                    type: string
-                example:
-                  "email": "example@site.com"
-                  "registration_date": "2021. 3. 24."
-                  "type": "company"
-                  "letter_ok": "2021. 3. 24."
-                  "social_id": "...."
-                  "nickname": "...."
-                  "profile_image": "https://...."
-                  "thumbnail_image": "https://...."
-            (업체) application/json:
+            application/json:
               schema:
                 type: object
                 properties:
@@ -544,7 +542,7 @@ paths:
   /users/:email/checked:
     get:
       tags:
-        - "Common"
+        - "Company"
       summary: "이메일 인증되었는지 확인"
       description: "이메일 인증이 되었는지 확인합니다."
       parameters:
